--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="GitHub-trend-stat : statistical approach to github trend using crawling">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
+    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
     <title>GitHub-trend-stat</title>
   </head>
 
@@ -73,7 +73,7 @@ $ git checkout gh-pages
       </footer>
     </div>
 
-    
+
 
   </body>
 </html>
