--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
     <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.js" charset="utf-8"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/async/0.9.0/async.js" charset="utf-8"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment.min.js" charset="utf-8"></script>
     <title>GitHub-trend-stat</title>
   </head>
 
@@ -74,6 +77,6 @@ $ git checkout gh-pages
     </div>
 
 
-
+    <script src="./javascripts/main.js" charset="utf-8"></script>
   </body>
 </html>
